remove draft and events; re-write management